--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>This is a simple webpage on Github Pages.</p>
         <p>Here's a picture of a cute cat:</p>
 
-        <img src="https:/ /placekitten.com/200/300" alt="A cute kitten">
+        <img src="https://unsplash.com/photos/brown-and-black-cat-on-white-background-Y0WXj3xqJz0?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink">
 
         <p>Visit <a href="https:/ /github.com">GitHub</a>to learn more about coding.</p>
 
@@ -35,7 +35,7 @@
 
     <footer>
 
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 Fikile Seokamo</p>
 
     </footer>
 
