--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
 <head>
 
-    <meta> charset="UTF-8">
+    <meta charset="UTF-8">
 
-    <meta> name="viewport" content="width=device-width, initial-scale=1.0">
+    <META name="viewport" content="width=device-width, initial-scale=1.O">
 
-    <title>My First Github Page</title>
+        <TITLE>My First GitHub Page</TITLE>
 
 </head>
 
@@ -16,32 +16,29 @@
 
     <header>
 
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to My Website!</h1>
 
     </header>
 
 
     <main>
-        <p>This is a simple webpage on Github Pages.</p>
+
+        <p>This is a simple webpage hosted on GitHub Pages</p>
+
         <p>Here's a picture of a cute cat:</p>
 
-        <img src="https:/ /placekitten.com/200/300" alt="A cute kitten">
+        <img src="c:\Users\bida25-134\OneDrive - Botswana Accountancy College\my-github-page\sergey-semin-Y0WXj3xqJz0-unsplash.jpg">
 
-        <p>Visit <a href="https:/ /github.com">GitHub</a>to learn more about coding.</p>
+        <p>Visit <a href= "https://github.com">GitHub</a> to learn more about coding.</p>
 
     </main>
 
-
-
     <footer>
 
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 Fikile Seokamo</p>
 
     </footer>
 
 </body>
 
 </html>
-
-    
-
