--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
 <head>
 
-    <meta charset="UTF-8">
+    <meta> charset="UTF-8">
 
-    <META name="viewport" content="width=device-width, initial-scale=1.O">
+    <meta> name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <TITLE>My First GitHub Page</TITLE>
+    <title>My First Github Page</title>
 
 </head>
 
@@ -16,22 +16,22 @@
 
     <header>
 
-        <h1>Welcome to My Website!</h1>
+        <h1>Welcome to My Website</h1>
 
     </header>
 
 
     <main>
-
-        <p>This is a simple webpage hosted on GitHub Pages</p>
-
+        <p>This is a simple webpage on Github Pages.</p>
         <p>Here's a picture of a cute cat:</p>
 
-        <img src="c:\Users\bida25-134\OneDrive - Botswana Accountancy College\my-github-page\sergey-semin-Y0WXj3xqJz0-unsplash.jpg">
+        <img src="sergey-semin-Y0WXj3xqJz0-unsplash.jpg"width="300">
 
-        <p>Visit <a href= "https://github.com">GitHub</a> to learn more about coding.</p>
+        <p>Visit <a href="https:/ /github.com">GitHub</a>to learn more about coding.</p>
 
     </main>
+
+
 
     <footer>
 
@@ -42,3 +42,6 @@
 </body>
 
 </html>
+
+    
+
