Added About and Contact pages with navigation

--- a/about.html
+++ b/about.html
@@ -4,8 +4,11 @@
 
 <head>
 
+    <meta charset="UTF-8">
 
-    <title>My First Github Page</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <title>About Me</title>
 
 </head>
 
@@ -13,7 +16,7 @@
 
     <header>
 
-        <h1>Welcome to My Website</h1>
+        <h1>About Me</h1>
 
         <nav>
 
@@ -22,23 +25,18 @@
             <a href="about.html">About</a>
 
             <a href="contact.html">Contact</a>
-            
+
         </nav>
 
     </header>
 
-
     <main>
-        <p>This is a simple webpage on Github Pages.</p>
-        <p>Here's a picture of a cute cat:</p>
 
-        <img src="sergey-semin-Y0WXj3xqJz0-unsplash.jpg"width="300">
+        <p>Hi! I'm a beginner web developer learning how to use GitHub Pages.</p>
 
-        <p>Visit <a href="https:/ /github.com">GitHub</a>to learn more about coding.</p>
+        <p>This is my first multi-page website, and I'm excited to share it with you!</p>
 
     </main>
-
-
 
     <footer>
 
@@ -49,6 +47,3 @@
 </body>
 
 </html>
-
-    
-
