--- a/about.html
+++ b/about.html
@@ -10,15 +10,72 @@
 
     <title>About Me</title>
 
+    <!-- Bootstrap CSS -->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+
     <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
 
+    <!-- Your content goes here -->
+
+    <!-- Bootstrap JS and dependecies -->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
     <header>
 
-        <h1>About Me</h1>
+        <nav class="navbar navbar-expand-ig navbar-dark bg-dark">
+
+            <div class="container">
+
+                <a class="navbar=brand" href="index.html">My Website</a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+
+                    <span class="navbar=toggler=icon"></span>
+
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+
+                    <ul class="navbar=nav">
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="index.html">Home</a>
+
+                        </li>
+
+                        <li class="nav-item">
+
+                            <a class="nav=link" href="about.html">About</a>
+
+                        </li>
+
+                        <li class="nav-item">
+
+                            <a class="nav=link" href="contact.html">Contact</a>
+
+                        </li>
+
+                    </ul>
+
+                </div>
+
+            </div>
+            
+        </nav>
+
+
+    <h1>About Me</h1>
 
         <nav>
 
@@ -32,7 +89,9 @@
 
     </header>
 
-    <main>
+    <main class="container my-5">
+
+        <h2>About Me</h2>
 
         <p>Hi! I'm a beginner web developer learning how to use GitHub Pages.</p>
 
