Updated bakery website

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <title>About Me</title>
+    <title>About Us</title>
 
     <!-- Bootstrap CSS -->
 
@@ -36,7 +36,7 @@
 
             <div class="container">
 
-                <a class="navbar=brand" href="index.html">My Website</a>
+                <a class="navbar=brand" href="index.html">ByKea Bakery</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 
@@ -75,7 +75,7 @@
         </nav>
 
 
-    <h1>About Me</h1>
+    <h1>About Us</h1>
 
         <nav>
 
@@ -91,17 +91,17 @@
 
     <main class="container my-5">
 
-        <h2>About Me</h2>
+        <h2>About Us</h2>
 
-        <p>Hi! I'm a beginner web developer learning how to use GitHub Pages.</p>
+        <p>ByKea Bakery is a small artisan bakery dedicated to creating fresh, delicious baked goods daily.</p>
 
-        <p>This is my first multi-page website, and I'm excited to share it with you!</p>
+        <p>Our mission is simple - bake fresh, serve joy and make every visit sweet!</p>
 
     </main>
 
     <footer>
 
-        <p>&copy; 2025 Fikile Seokamo</p>
+        <p>&copy; 2025 ByKea Bakery</p>
 
     </footer>
 
