--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
 
-    <title>My First Github Page</title>
+    <title>ByKea Bakery</title>
 
     <!-- Bootstrap CSS -->
 
@@ -33,7 +33,7 @@
 
             <div class="container">
 
-                <a class="navbar=brand" href="index.html">My Website</a>
+                <a class="navbar=brand" href="index.html">ByKea Bakery</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 
@@ -71,7 +71,7 @@
 
         </nav>
 
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to the ByKea Bakery site</h1>
 
         <nav>
 
@@ -92,13 +92,13 @@
 
             <div class="col-md-8">
 
-                <h2>Welcome to My Website!</h2>
+                <h2>Freshly Baked Happiness Every Day</h2>
 
-                <p>This is a simple webpage hosted on GitHub Pages,</p>
+                <p>Welcome to ByKea Bakery, where every pastry is sure to fill you up with warmth</p>
 
-                <p>Here's a picture of a cute cat:</p>
+                <p>Here's a picture of one of our specialties:</p>
 
-                <img src="sergey-semin-Y0WXj3xqJz0-unsplash.jpg">
+                <img src="brooke-lark-V4MBq8kue3U-unsplash.jpg">
 
                 <p class="mt-3">Visit <a href="https://github.com" class="btn btn-primary">GitHub</a> to learn more about coding.</p>
 
@@ -112,7 +112,7 @@
 
                         <h5 class="card-title">Did You Know?</h5>
 
-                        <p class="card-text">GitHub Pages is a free service to host static websites directly from your GitHub repository.</p>
+                        <p class="card-text">Our pastries are baked fresh every morning using locally sourced ingredients.</p>
 
                     </div>
 
@@ -128,7 +128,7 @@
 
     <footer>
 
-        <p>&copy; 2025 Fikile Seokamo</p>
+        <p>&copy; 2025 ByKea Bakery</p>
 
     </footer>
 
