--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Contact Me</title>
+    <title>Contact Us</title>
 
     <!-- Bootstrap CSS -->
 
@@ -36,7 +36,7 @@
 
             <div class="container">
 
-                <a class="navbar=brand" href="index.html">My Website</a>
+                <a class="navbar=brand" href="index.html">ByKea Bakery</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
 
@@ -75,7 +75,7 @@
         </nav>
 
 
-    <h1>Contact Me</h1>
+    <h1>Contact Us</h1>
 
         <nav>
 
@@ -99,7 +99,7 @@
 
     <footer>
 
-        <p>&copy; 2025 Fikile Seokamo</p>
+        <p>&copy; 2025 ByKea</p>
 
     </footer>
 
