Updated bakery website

--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
 
     <main class="container my-5">
 
-        <h2>Contact Me</h2>
+        <h2>Contact Us</h2>
 
         <p>If you'd like to get in touch, feel free to email me at<a href="mailto:bida25-134@thuto.bac.ac.bw">bida25-134@thuto.bac.ac.bw</a>.</p>
 
